--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,4 +6,149 @@ BASIC SETUP
 
 body, input, button, select, textarea {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+}
+
+.container {
+    margin: 0 auto;
+    padding: 1em;
+    width: 70%;
+    max-width: 1200px;
+}
+
+::selection {
+    background: #222;
+    color: #fff;
+}
+
+/*
+==============================
+HEADER
+==============================
+*/
+
+header {
+    background: #690;
+    color: #fff;
+    height: 300px;
+    /* margin-bottom: 0.5em; */
+}
+
+header .container {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+header h1 {
+    font-family: 'Space Mono', monospace;
+    font-size: 2em;
+}
+
+header a {
+    color: #fff;
+    text-decoration: none;
+}
+
+header p {
+    opacity: 0.6;
+}
+
+/*
+==============================
+NAV BAR
+==============================
+*/
+
+.navbar {
+    background: #444;
+}
+
+.stickyNav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.navbar .container {
+    padding: 0;
+}
+
+.navbar nav ul {
+    display: flex;
+}
+
+.navbar nav li {
+    flex: 1;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s;
+}
+
+.navbar nav a {
+    padding: 1em 0;
+    width: 100%;
+    text-decoration: none;
+    display: inline-block;
+    color: #fff;
+    text-transform: lowercase;
+}
+
+.navbar nav li:hover {
+    background: #690;
+}
+
+.logo {
+    max-width: 0;
+    overflow: hidden;
+    font-family: 'Space Mono', monospace;
+    font-weight: 700;
+    background: #333;
+    color: #690;
+}
+
+.stickyNav .logo {
+    max-width: 100%;
+}
+
+.social {
+    flex: 0.5;
+}
+
+/*
+==============================
+SECTION
+==============================
+*/
+
+section {
+    background-color: #ccc;
+    height: 800px;
+}
+
+/*
+==============================
+FOOTER
+==============================
+*/
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+/* body {
+    margin-bottom: calc(76px + 1.5rem);
+} */
+
+footer {
+    width: 100%;
+    background: #444;
+    color: #fff;
+    position: absolute;
+    bottom: 0;
 }
